# arb-nucleus-decomp

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  build-decompmain-gpu.sh  convert-graphs-cpu.sh  sb-build-decompmain-gpu.sh  sb-convert-graphs-cpu.sh  sb-run-benchmark-gpu.sh  sb-run-benchmark-kcore_ktruss-cpu.sh  sb-run-benchmark-kcore_ktruss-gpu.sh  sb-run-benchmark-nucleusdecomp-cpu.sh  sb-run-benchmark-nucleusdecomp-gpu.sh
benchmarks/NucleusDecomposition/: CMakeLists.txt  twotable_nosearch.h
gbbs/encodings/: CMakeLists.txt
results/: collect-arb-results.py  results-arb-nucleus-decomp-cpu-18859369.txt  results.csv
scripts/: .gitignore
scripts/nibi/: build_nucleus34.sh  run_nucleus34.sbatch
utils/: core.8945
